fix(app): correct contrast values

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -6,16 +6,16 @@
   /** primary **/
   --ion-color-primary: #00e8cc;
   --ion-color-primary-rgb: 0, 232, 204;
-  --ion-color-primary-contrast: #000000;
-  --ion-color-primary-contrast-rgb: 0, 0, 0;
+  --ion-color-primary-contrast: #311b58;
+  --ion-color-primary-contrast-rgb: 49, 27, 88;
   --ion-color-primary-shade: #00ccb4;
   --ion-color-primary-tint: #1aead1;
 
   /** secondary **/
   --ion-color-secondary: #311b58;
   --ion-color-secondary-rgb: 49, 27, 88;
-  --ion-color-secondary-contrast: #ffffff;
-  --ion-color-secondary-contrast-rgb: 255, 255, 255;
+  --ion-color-secondary-contrast: #00e8cc;
+  --ion-color-secondary-contrast-rgb: 0, 232, 204;
   --ion-color-secondary-shade: #2b184d;
   --ion-color-secondary-tint: #463269;
 
@@ -156,6 +156,10 @@
 
 [slot='start'] {
   margin: 8px 16px 8px 0;
+}
+
+ion-title {
+  --color: green;
 }
 
 ion-avatar {
